# SkyComet

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  splash.json
src-tauri/icons/: icon.icns
src-tauri/resources/: catalog-snapshot.json
src-tauri/src/: lib.rs  main.rs  release_config_tests.rs
src-tauri/src/commands/: catalog.rs  location.rs  mod.rs  passes.rs  profile.rs  rf.rs  rotor.rs  serial_rotor.rs  space_weather.rs  tracking.rs
src-tauri/src/core/: location.rs  mod.rs  observer.rs  profile.rs  sync.rs  tracking.rs
src-tauri/src/core/analysis/: doppler.rs  link_budget.rs  loss_models.rs  mod.rs
src-tauri/src/core/antenna/: mod.rs  profile.rs
src-tauri/src/core/db/: migrations.rs  mod.rs
src-tauri/src/core/location/: detect.rs  mod.rs  system.rs
src-tauri/src/core/orbit/: coordinates.rs  ground_track.rs  mod.rs  pass_planner.rs  sgp4_engine.rs
src-tauri/src/core/radio/: mod.rs  profile.rs
src-tauri/src/core/rotor/: backend.rs  feasibility.rs  kinematics.rs  mod.rs  profile.rs  serial.rs  simulator.rs
src-tauri/src/core/rotor/protocol/: engine.rs  (+2 more)
src-tauri/src/core/satellite/: mod.rs  repo.rs  satnogs.rs  snapshot.rs
src-tauri/src/core/space_weather/: fetcher.rs  mod.rs  repo.rs  risk_model.rs
src-tauri/src/core/telemetry/: decision.rs  decoder.rs  fetcher.rs  mod.rs  repo.rs
src-tauri/src/core/tle/: cache.rs  fetcher.rs  mod.rs  parser.rs  repo.rs  validator.rs
src-tauri/tests/: db_safety.rs  iss_pipeline.rs
(+158 files in other folders)
