[package]
name = "skycomet"
version = "0.1.0"
description = "Skycomet — amateur radio satellite ground station"
authors = ["Oguz Kabaca <kabacaoguzkbc@gmail.com>"]
edition = "2021"
rust-version = "1.85"
default-run = "skycomet"

[lib]
name = "skycomet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sgp4 = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
serialport = "4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.40", features = ["macros", "rt"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
